// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Component snapshots matches snapshot for disabled button 1`] = `
<button
  class="font-semibold rounded-lg transition-all duration-200 focus:outline-none focus:ring-2 focus:ring-offset-2 transform active:scale-95 disabled:opacity-50 disabled:cursor-not-allowed disabled:transform-none bg-blue-600 text-white hover:bg-blue-700 active:bg-blue-800 focus:ring-blue-500 shadow-lg hover:shadow-xl px-4 py-2 text-base"
  disabled=""
  type="button"
>
  Disabled Button
</button>
`;

exports[`Button Component snapshots matches snapshot for primary button 1`] = `
<button
  class="font-semibold rounded-lg transition-all duration-200 focus:outline-none focus:ring-2 focus:ring-offset-2 transform active:scale-95 disabled:opacity-50 disabled:cursor-not-allowed disabled:transform-none bg-blue-600 text-white hover:bg-blue-700 active:bg-blue-800 focus:ring-blue-500 shadow-lg hover:shadow-xl px-4 py-2 text-base"
  type="button"
>
  Primary Button
</button>
`;
